[gd_scene load_steps=4 format=3 uid="uid://bqd3pj1vbf4ip"]

[ext_resource type="Script" path="res://monetization/monetization_demo.gd" id="1"]
[ext_resource type="Script" path="res://monetization/monetization_manager.gd" id="2"]
[ext_resource type="Theme" uid="uid://cjj058exws11l" path="res://common/ui/ui_theme.tres" id="3"]

[node name="MonetizationDemo" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
mouse_default_cursor_shape = 2
theme = ExtResource("3")
script = ExtResource("1")

[node name="MonetizationManager" type="Node" parent="."]
script = ExtResource("2")

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 2
anchor_right = 1.0
anchor_bottom = 1.0
size_flags_horizontal = 3
size_flags_vertical = 3
theme_override_constants/margin_left = 32
theme_override_constants/margin_top = 32
theme_override_constants/margin_right = 32
theme_override_constants/margin_bottom = 32

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
custom_minimum_size = Vector2(0, 480)

[node name="Title" type="Label" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Configurable Monetization"
vertical_alignment = 1

[node name="Subtitle" type="Label" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Simulated flows for ads, in-app purchases, and an in-game store."
vertical_alignment = 1
modulate = Color(0.85, 0.9, 1, 1)

[node name="Sections" type="HBoxContainer" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
separation = 16

[node name="AdPanel" type="Panel" parent="MarginContainer/VBoxContainer/Sections"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
custom_minimum_size = Vector2(0, 250)

[node name="PanelVBox" type="VBoxContainer" parent="MarginContainer/VBoxContainer/Sections/AdPanel"]
layout_mode = 0
anchor_right = 1.0
anchor_bottom = 1.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_minimum_size = Vector2(0, 220)

[node name="PanelTitle" type="Label" parent="MarginContainer/VBoxContainer/Sections/AdPanel/PanelVBox"]
layout_mode = 2
text = "Ad Placements"

[node name="AdOptionButton" type="OptionButton" parent="MarginContainer/VBoxContainer/Sections/AdPanel/PanelVBox"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3

[node name="AdInfo" type="RichTextLabel" parent="MarginContainer/VBoxContainer/Sections/AdPanel/PanelVBox"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
bbcode_enabled = true
fit_content_height = true
scroll_active = false
autowrap_mode = 2
text = "Select an ad placement"

[node name="AdShowButton" type="Button" parent="MarginContainer/VBoxContainer/Sections/AdPanel/PanelVBox"]
unique_name_in_owner = true
layout_mode = 2
text = "Show Ad"

[node name="PurchasePanel" type="Panel" parent="MarginContainer/VBoxContainer/Sections"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
custom_minimum_size = Vector2(0, 250)

[node name="PurchaseVBox" type="VBoxContainer" parent="MarginContainer/VBoxContainer/Sections/PurchasePanel"]
layout_mode = 0
anchor_right = 1.0
anchor_bottom = 1.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_minimum_size = Vector2(0, 220)

[node name="PurchaseTitle" type="Label" parent="MarginContainer/VBoxContainer/Sections/PurchasePanel/PurchaseVBox"]
layout_mode = 2
text = "In-App Products"

[node name="ProductOptionButton" type="OptionButton" parent="MarginContainer/VBoxContainer/Sections/PurchasePanel/PurchaseVBox"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3

[node name="ProductInfo" type="RichTextLabel" parent="MarginContainer/VBoxContainer/Sections/PurchasePanel/PurchaseVBox"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
bbcode_enabled = true
fit_content_height = true
scroll_active = false
autowrap_mode = 2
text = "Select a product"

[node name="PurchaseButton" type="Button" parent="MarginContainer/VBoxContainer/Sections/PurchasePanel/PurchaseVBox"]
unique_name_in_owner = true
layout_mode = 2
text = "Purchase"

[node name="StorePanel" type="Panel" parent="MarginContainer/VBoxContainer/Sections"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
custom_minimum_size = Vector2(0, 250)

[node name="StoreVBox" type="VBoxContainer" parent="MarginContainer/VBoxContainer/Sections/StorePanel"]
layout_mode = 0
anchor_right = 1.0
anchor_bottom = 1.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_minimum_size = Vector2(0, 220)

[node name="StoreTitle" type="Label" parent="MarginContainer/VBoxContainer/Sections/StorePanel/StoreVBox"]
layout_mode = 2
text = "In-Game Store"

[node name="StoreOptionButton" type="OptionButton" parent="MarginContainer/VBoxContainer/Sections/StorePanel/StoreVBox"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3

[node name="StoreInfo" type="RichTextLabel" parent="MarginContainer/VBoxContainer/Sections/StorePanel/StoreVBox"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
bbcode_enabled = true
fit_content_height = true
scroll_active = false
autowrap_mode = 2
text = "Select a store item"

[node name="StoreButton" type="Button" parent="MarginContainer/VBoxContainer/Sections/StorePanel/StoreVBox"]
unique_name_in_owner = true
layout_mode = 2
text = "Buy With Virtual Currency"

[node name="LogPanel" type="Panel" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
custom_minimum_size = Vector2(0, 220)

[node name="LogVBox" type="VBoxContainer" parent="MarginContainer/VBoxContainer/LogPanel"]
layout_mode = 0
anchor_right = 1.0
anchor_bottom = 1.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_minimum_size = Vector2(0, 200)

[node name="LogHeader" type="HBoxContainer" parent="MarginContainer/VBoxContainer/LogPanel/LogVBox"]
layout_mode = 2
size_flags_horizontal = 3
separation = 12

[node name="LogTitle" type="Label" parent="MarginContainer/VBoxContainer/LogPanel/LogVBox/LogHeader"]
layout_mode = 2
size_flags_horizontal = 3
text = "Flow Log"

[node name="RestoreButton" type="Button" parent="MarginContainer/VBoxContainer/LogPanel/LogVBox/LogHeader"]
unique_name_in_owner = true
layout_mode = 2
text = "Restore Purchases"

[node name="ClearLogButton" type="Button" parent="MarginContainer/VBoxContainer/LogPanel/LogVBox/LogHeader"]
unique_name_in_owner = true
layout_mode = 2
text = "Clear Log"

[node name="LogOutput" type="RichTextLabel" parent="MarginContainer/VBoxContainer/LogPanel/LogVBox"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
bbcode_enabled = true
scroll_active = true
autowrap_mode = 2
